--- a/store/products/templates/products/products.html
+++ b/store/products/templates/products/products.html
@@ -1,5 +1,5 @@
 {%extends 'products/base.html'%}
-{% load static %}
+{% load static cache %}
 
 {%block css%}
     <link href="{% static 'vendor/css/products.css' %}" rel="stylesheet">
@@ -54,6 +54,7 @@
             </div>
 
             <div class="row">
+<!--                {% cache 30 object_list %}-->
                 {% for product in object_list %}
                     <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100">
@@ -76,7 +77,9 @@
                         </div>
                     </div>
                 </div>
-                {%endfor%}
+                    {%endfor%}
+<!--                {%endcache%}-->
+
             </div>
         {% if is_paginated %}
             <nav aria-label="Page navigation example">
